--- a/src/assets/css/icon.scss
+++ b/src/assets/css/icon.scss
@@ -1,59 +1,50 @@
 @font-face {
-  font-family: 'iconfont';
-  /* project id 508850 */
-  src: url($font-path+'iconfont.eot');
-  src: url($font-path+'iconfont.eot?#iefix') format('embedded-opentype'), url($font-path+'iconfont.woff') format('woff'), url($font-path+'iconfont.ttf') format('truetype'), url($font-path+'iconfont.svg#iconfont') format('svg');
+	font-family: 'iconfont';
+	/* project id 665262 */
+	src: url("//at.alicdn.com/t/font_665262_nc954cg430q3q5mi.eot");
+	src: url("//at.alicdn.com/t/font_665262_nc954cg430q3q5mi.eot?#iefix") format('embedded-opentype'), url("//at.alicdn.com/t/font_665262_nc954cg430q3q5mi.woff") format('woff'), url("//at.alicdn.com/t/font_665262_nc954cg430q3q5mi.ttf") format('truetype'), url("//at.alicdn.com/t/font_665262_nc954cg430q3q5mi.svg#iconfont") format('svg');
 }
-
 .iconfont {
-  font-family: 'iconfont' !important;
-  font-size: 2rem;
-  font-weight: normal;
-  font-style: normal;
-  font-variant: normal;
-  text-transform: none;
-  speak: none;
-  /* Better Font Rendering =========== */
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-stroke-width: 0.2px;
+	font-family: 'iconfont' !important;
+	font-size: 2rem;
+	font-weight: normal;
+	font-style: normal;
+	font-variant: normal;
+	text-transform: none;
+	speak: none;
+	/* Better Font Rendering =========== */
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	-webkit-text-stroke-width: 0.2px;
 }
-
-
 [class^="ion-ios-icon-"]:before,
 [class*=" ion-ios-icon-"]:before,
 [class^="ion-md-icon-"]:before,
 [class*=" ion-md-icon-"]:before {
-  @extend .iconfont;
-  font-size: inherit;
+	@extend .iconfont;
+	font-size: inherit;
 }
-
 .ion-ios-icon-repayment-outline:before,
 .ion-md-icon-repayment-outline:before {
-  content: '\e61c';
+	content: '\e61c';
 }
-
 .ion-ios-icon-repayment:before,
 .ion-md-icon-repayment:before {
-  content: '\e635';
+	content: '\e635';
 }
-
 .ion-ios-icon-payment-outline:before,
 .ion-md-icon-payment-outline:before {
-  content: '\e706';
+	content: '\e706';
 }
-
 .ion-ios-icon-payment:before,
 .ion-md-icon-payment:before {
-  content: '\e7dc';
+	content: '\e7dc';
 }
-
 .ion-ios-icon-share-outline:before,
 .ion-md-icon-share-outline:before {
-  content: '\e607';
+	content: '\e607';
 }
-
 .ion-ios-icon-share:before,
 .ion-md-icon-share:before {
-  content: '\e62b';
+	content: '\e62b';
 }
