--- a/src/assets/css/base.scss
+++ b/src/assets/css/base.scss
@@ -5,18 +5,21 @@ html {
 }
 
 $colors: (
-	primary: #488aff,
-	secondary: #02cdf4,
-	warning: #ffa200,
-	danger: #f53d3d,
-	success: #6ed91f,
-	light: #dff5ff,
-	dark: #444,
-	link: #488aff,
-	gray: #999,
-	icon: #666
-);
-$border-color: #ddd;
+	primary: 	#3dcbbd,
+	secondary: 	#11a593,
+	warning: 	#ffaa33,
+	danger: 	#fe4739,
+	success: 	#6ed91f,
+	light: 		#999,
+	dark: 		#666,
+	link: 		#488aff,
+	gray: 		#c5c5c5,
+	icon: 		#828282,
+	font:		#333,
+	border:		#ddd,
+	bg: 		#fafafa;
+);		
+
 
 .transition-02 {transition: all 0.2s ease;
 }
@@ -381,6 +384,3 @@ input[type=date] {
     color:#c7c7c7;width: 100%;
     text-align: center;
 }*/
-
-
-
