--- a/src/assets/css/base.scss
+++ b/src/assets/css/base.scss
@@ -17,9 +17,13 @@ $colors: (
 	icon: 		#828282,
 	font:		#333,
 	border:		#ddd,
-	bg: 		#fafafa;
-);		
-
+	bg: 		#fafafa
+);
+$padding-horizontal:	rem(30);
+$designWidth : 750; //如设计图是750
+@function rem( $px ){
+	@return $px/20 + rem;
+}
 
 .transition-02 {transition: all 0.2s ease;
 }
@@ -88,162 +92,7 @@ $colors: (
 }
 
 
-/* 防止用户自定义背景颜色对网页的影响，添加让用户可以自定义字体 */
 
-html {
-  min-height: 100%;
-  -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
-  padding: constant(safe-area-inset-top) constant(safe-area-inset-right) constant(safe-area-inset-bottom) constant(safe-area-inset-left);
-}
-
-/* 内外边距通常让各个浏览器样式的表现位置不同 */
-
-body,
-div,
-dl,
-dt,
-dd,
-ul,
-ol,
-li,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-pre,
-code,
-form,
-fieldset,
-legend,
-input,
-textarea,
-p,
-blockquote,
-th,
-td,
-hr,
-button,
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section,
-* {
-  margin: 0;
-  padding: 0;
-}
-
-/* 重设 HTML5 标签, IE 需要在 js 中 createElement(TAG) */
-
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-  display: block;
-}
-
-/* HTML5 媒体文件跟 img 保持一致 */
-
-audio,
-canvas,
-video {
-  display: inline-block;
-  *display: inline;
-  *zoom: 1;
-}
-
-/* 要注意表单元素并不继承父级 font 的问题 */
-
-body,
-button,
-input,
-select,
-textarea {
-  font-style: normal;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-input,
-select,
-textarea {
-  font-size: 100%;
-}
-
-/* 去掉各Table  cell 的边距并让其边重合 */
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-/* IE bug fixed: th 不继承 text-align*/
-
-th {
-  text-align: inherit;
-}
-
-/* 去除默认边框 */
-
-fieldset,
-img {
-  border: 0;
-}
-
-/* ie6 7 8(q) bug 显示为行内表现 */
-
-iframe {
-  display: block;
-}
-
-/* 去掉 firefox 下此元素的边框 */
-
-abbr,
-acronym {
-  border: 0;
-  font-variant: normal;
-}
-
-/* 一致的 del 样式 */
-
-del {
-  text-decoration: line-through;
-}
-
-address,
-caption,
-cite,
-code,
-dfn,
-em,
-th,
-var {
-  font-style: normal;
-  font-weight: 500;
-}
-
-/* 去掉列表前的标识, li 会继承 */
-
-ol,
-ul {
-  list-style: none;
-}
 
 /* 对齐是排版最重要的因素, 别让什么都居中 */
 
