--- a/src/assets/css/icon.scss
+++ b/src/assets/css/icon.scss
@@ -1,8 +1,10 @@
 @font-face {
-	font-family: 'iconfont';
-	/* project id 665262 */
-	src: url("//at.alicdn.com/t/font_665262_nc954cg430q3q5mi.eot");
-	src: url("//at.alicdn.com/t/font_665262_nc954cg430q3q5mi.eot?#iefix") format('embedded-opentype'), url("//at.alicdn.com/t/font_665262_nc954cg430q3q5mi.woff") format('woff'), url("//at.alicdn.com/t/font_665262_nc954cg430q3q5mi.ttf") format('truetype'), url("//at.alicdn.com/t/font_665262_nc954cg430q3q5mi.svg#iconfont") format('svg');
+	font-family: 'iconfont';  /* project id 665262 */
+    src: url('//at.alicdn.com/t/font_665262_nc954cg430q3q5mi.eot');
+    src: url('//at.alicdn.com/t/font_665262_nc954cg430q3q5mi.eot?#iefix') format('embedded-opentype'),
+    url('//at.alicdn.com/t/font_665262_nc954cg430q3q5mi.woff') format('woff'),
+    url('//at.alicdn.com/t/font_665262_nc954cg430q3q5mi.ttf') format('truetype'),
+    url('//at.alicdn.com/t/font_665262_nc954cg430q3q5mi.svg#iconfont') format('svg');
 }
 .iconfont {
 	font-family: 'iconfont' !important;
