--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -19,7 +19,8 @@ $app-direction: ltr;
 // Fonts
 // --------------------------------------------------
 //Sass Variables
-
+$font-size-base:	1.2rem;
+$hairlines-width:	1px;	
 $background-color:color($colors, bg);
 $tabs-background:#fff;
 $button-ios-border-radius:2.2rem;
