--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -110,3 +110,12 @@ ion-buttons.buttons-group {
 	width: 100%;
 	height: 100%;
 }
+
+
+
+.header{
+	.toolbar{overflow: visible;}
+	.bar-buttons{
+		.iconfont{font-size:30px;}
+	}
+}
