--- a/src/pages/remind/remind/remind.scss
+++ b/src/pages/remind/remind/remind.scss
@@ -15,10 +15,17 @@ page-remind {
 		}
 		.list{
 			.item{
-				padding-left: rem(60);
+				padding-left: rem(60);padding-top: rem(20);
 				.item-inner{padding-right: 1rem;}
 				.label{
 					margin:0;
+					.remind-content{
+						position: relative;padding-bottom: rem(16);padding-right: rem(60);
+						P{margin-bottom: 0;white-space:normal;word-break: break-all;}
+						.mark{display: flex;position: absolute;height:rem(44);width: rem(44);border-radius: 50%;border: 2px solid #bcbcbc;justify-content: center;align-items: center;top:rem(110);right:2px;font-size: 1.8rem;color:#fff;@extend .transition-02;
+
+						}
+					}
 					h3{
 						display: flex;height:rem(68);align-items: center;@extend .fn-text-overflow;margin-bottom: 0;
 						.time{
@@ -37,7 +44,7 @@ page-remind {
 					}
 					.return-wrapper{
 						padding-left: 0.6rem;height:rem(76);
-						@include text-overflow();background-color: #f6f6f6;border-top: 1px solid color($colors,border);
+						@include text-overflow();background-color: #f6f6f6;border-top: $border;
 					}
 					.return{
 						color:color($colors,primary);display: flex;height:rem(74);align-items: center;justify-content: flex-start;
@@ -48,7 +55,7 @@ page-remind {
 					}
 				}
 				.top-line{
-					position: absolute;display:inline-block;height: 1.2rem;width: 1px;background-color: color($colors,border);left:1.5rem;top:0;
+					position: absolute;display:inline-block;height: 2.2rem;width: 1px;background-color: color($colors,border);left:1.5rem;top:0;
 				}
 				&:before{
 					position: absolute;display:inline-block;height: rem(20);width: rem(20);background-color: color($colors,primary);left:1rem;top:0.9rem;content: '';border-radius:50%;z-index:2;
@@ -68,6 +75,13 @@ page-remind {
 						}
 					}
 				}
+				&.pitch-on{
+					.label{
+						.remind-content{
+							.mark{background-color: color($colors,warning);border-color:color($colors,warning); }
+						}
+					}
+				}
 			}
 			.item-options{
 				.button{
@@ -75,11 +89,23 @@ page-remind {
 				}
 			}
 			.item-wrapper:first-child{
-				.item{
+				.item{padding-top: 0;
 					.top-line{
 						display:none;
 					}
 				}
+			}
+		}
+	}
+	.bottom-bar{width: 100%;display: flex;height:rem(100);border-top:$border;justify-content:space-between;padding:rem(10) 0;
+		div{width: 50%;display: flex;justify-content:center;align-items:center; font-size: rem(36);
+			.iconfont{font-size:3.6rem;}
+		}
+		.delete{color:color($colors,danger);border-right: $border;}
+		.check-all{
+			.iconfont{
+				display: flex;width: rem(42);height: rem(42);justify-content: center;align-items: center;border-radius: 50%;
+				border: $border;
 			}
 		}
 	}
