--- a/src/assets/css/base.scss
+++ b/src/assets/css/base.scss
@@ -19,6 +19,7 @@ $colors: (
 	border:		#ddd,
 	bg: 		#fafafa
 );
+$border:		1px solid color($colors,border);
 $padding-horizontal:	rem(30);
 $designWidth : 750; //如设计图是750
 @function rem( $px ){
