--- a/src/pages/login/login/login.scss
+++ b/src/pages/login/login/login.scss
@@ -19,7 +19,7 @@ page-login {
 	.main-form{
 		.item{padding-left: 0;min-height: 4rem;
 			.item-inner{border-bottom: none;padding-right: rem(28);
-				.input{height: 100%;border-bottom:rem(1) solid color($colors,border);display:flex;align-items: center;
+				.input{height: 100%;border-bottom:$border;display:flex;align-items: center;
 					input{margin:0;font-size:rem(30);}
 				}
 			}
