--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,6 +1,4 @@
 // http://ionicframework.com/docs/theming/
-
-
 // App Global Sass
 // --------------------------------------------------
 // Put style rules here that you want to apply globally. These
@@ -14,16 +12,16 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+
 /* 防止用户自定义背景颜色对网页的影响，添加让用户可以自定义字体 */
 
 html {
-  min-height: 100%;
-  -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
-  padding: constant(safe-area-inset-top) constant(safe-area-inset-right) constant(safe-area-inset-bottom) constant(safe-area-inset-left);
+    font-size: 10px !important;
+    min-height: 100%;
+    -webkit-text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+    padding: constant(safe-area-inset-top) constant(safe-area-inset-right) constant(safe-area-inset-bottom) constant(safe-area-inset-left);
 }
-
-
 
 
 /* 内外边距通常让各个浏览器样式的表现位置不同 */
@@ -67,9 +65,10 @@ menu,
 nav,
 section,
 * {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
+
 
 /* 重设 HTML5 标签, IE 需要在 js 中 createElement(TAG) */
 
@@ -84,18 +83,20 @@ hgroup,
 menu,
 nav,
 section {
-  display: block;
+    display: block;
 }
+
 
 /* HTML5 媒体文件跟 img 保持一致 */
 
 audio,
 canvas,
 video {
-  display: inline-block;
-  *display: inline;
-  *zoom: 1;
+    display: inline-block;
+    *display: inline;
+    *zoom: 1;
 }
+
 
 /* 要注意表单元素并不继承父级 font 的问题 */
 
@@ -104,55 +105,61 @@ button,
 input,
 select,
 textarea {
-  font-style: normal;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    font-style: normal;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 input,
 select,
 textarea {
-  font-size: 100%;
+    font-size: 100%;
 }
+
 
 /* 去掉各Table  cell 的边距并让其边重合 */
 
 table {
-  border-collapse: collapse;
-  border-spacing: 0;
+    border-collapse: collapse;
+    border-spacing: 0;
 }
+
 
 /* IE bug fixed: th 不继承 text-align*/
 
 th {
-  text-align: inherit;
+    text-align: inherit;
 }
+
 
 /* 去除默认边框 */
 
 fieldset,
 img {
-  border: 0;
+    border: 0;
 }
+
 
 /* ie6 7 8(q) bug 显示为行内表现 */
 
 iframe {
-  display: block;
+    display: block;
 }
+
 
 /* 去掉 firefox 下此元素的边框 */
 
 abbr,
 acronym {
-  border: 0;
-  font-variant: normal;
+    border: 0;
+    font-variant: normal;
 }
+
 
 /* 一致的 del 样式 */
 
 del {
-  text-decoration: line-through;
+    text-decoration: line-through;
 }
 
 address,
@@ -163,32 +170,34 @@ dfn,
 em,
 th,
 var {
-  font-style: normal;
-  font-weight: 500;
+    font-style: normal;
+    font-weight: 500;
 }
+
 
 /* 去掉列表前的标识, li 会继承 */
 
 ol,
 ul {
-  list-style: none;
+    list-style: none;
 }
 
 input[type=tel],
 input[type=number],
 input[type=password],
 input[type=date] {
-  font-family: tahoma, arial, "Hiragino Sans GB", \5b8b\4f53, sans-serif;
+    font-family: tahoma, arial, "Hiragino Sans GB", \5b8b\4f53, sans-serif;
 }
 
 body {
-	margin: 0 auto;
-	overflow-x: hidden;
-	width: 375px;
-	min-height: 100%;
-	left:50%;
-	margin-left: -187.5px;
+    margin: 0 auto;
+    overflow-x: hidden;
+    width: 375px;
+    min-height: 100%;
+    left: 50%;
+    margin-left: -187.5px;
 }
-.app-root .ion-page.show-page ~ .nav-decor{
-	background-color: color($colors,bg);
+
+.app-root .ion-page.show-page~.nav-decor {
+    background-color: color($colors, bg);
 }
